# activity_tracking_system

./: README.md  pyproject.toml
.github/workflows/: ci.yml
activity_tracking_system/: hooks.py  modules.txt  utils.py
activity_tracking_system/activity_tracking_system/activity_tracking_system_dashboard/activity_tracker_dashboard/: activity_tracker_dashboard.json
activity_tracking_system/activity_tracking_system/dashboard_chart/activity_count_in_different_cities/: activity_count_in_different_cities.json
activity_tracking_system/activity_tracking_system/dashboard_chart/budget_approved_over_the_time/: budget_approved_over_the_time.json
activity_tracking_system/activity_tracking_system/dashboard_chart/total_activities/: total_activities.json
activity_tracking_system/activity_tracking_system/dashboard_chart/total_activities_based_on_funder/: total_activities_based_on_funder.json
activity_tracking_system/activity_tracking_system/dashboard_chart/total_amount_utilised/: total_amount_utilised.json
activity_tracking_system/activity_tracking_system/doctype/activity/: activity.js  activity.json  activity.py  test_activity.py
activity_tracking_system/activity_tracking_system/doctype/city/: city.js  city.json  city.py  test_city.py
activity_tracking_system/activity_tracking_system/doctype/department/: department.js  department.json  department.py  test_department.py
activity_tracking_system/fixtures/: state.json  workflow.json  workflow_action_master.json  workflow_state.json
activity_tracking_system/public/CSS/: custom.css
(+83 files in other folders)
